Remove target blank links

--- a/site/layouts/about/single.html
+++ b/site/layouts/about/single.html
@@ -21,7 +21,7 @@
           {{ partial "skill" (dict "icon" "<svg><use xlink:href='/images/svg-symbols.svg#css'></use></svg>" "text" "Responsive, well scoped CSS") }}
           {{ partial "skill" (dict "icon" "<svg><use xlink:href='/images/svg-symbols.svg#javascript'></use></svg>" "text" "Modular, composable JavaScript") }}
           {{ partial "skill" (dict "icon" "<svg><use xlink:href='/images/svg-symbols.svg#comments'></use></svg>" "text" "Well commented, maintainable code") }}
-          {{ partial "skill" (dict "icon" "<svg><use xlink:href='/images/svg-symbols.svg#vue'></use></svg>" "text" "<span>Modern JavaScript frameworks (I have a soft spot for <a href='https://vuejs.org/' target='_blank'>Vue.js</a>)</span>") }}
+          {{ partial "skill" (dict "icon" "<svg><use xlink:href='/images/svg-symbols.svg#vue'></use></svg>" "text" "<span>Modern JavaScript frameworks (I have a soft spot for <a href='https://vuejs.org/'>Vue.js</a>)</span>") }}
           {{ partial "skill" (dict "icon" "<svg><use xlink:href='/images/svg-symbols.svg#speedometer'></use></svg>" "text" "Lightweight, performant websites") }}
           {{ partial "skill" (dict "icon" "<svg><use xlink:href='/images/svg-symbols.svg#a11y'></use></svg>" "text" "Accessibility — the web is for everyone") }}
           {{ partial "skill" (dict "icon" "<svg><use xlink:href='/images/svg-symbols.svg#smartphone'></use></svg>" "text" "Beautiful, clearly understandable UI") }}
@@ -32,7 +32,7 @@
           {{ partial "skill" (dict "icon" "<svg><use xlink:href='/images/svg-symbols.svg#wrench'></use></svg>" "text" "Using the right tools for the perfect build process") }}
           {{ partial "skill" (dict "icon" "<svg><use xlink:href='/images/svg-symbols.svg#styleguide'></use></svg>" "text" "Styleguide and design systems to build consistent UI at scale") }}
           {{ partial "skill" (dict "icon" "<abbr title='Keep It Simple, Stupid'>KISS</abbr>" "iconClass" "kiss" "text" "Avoid unnecessary complexity") }}
-          {{ partial "skill" (dict "icon" "<abbr title='JavaScript, APIs and Markup'>JAMstack</abbr>" "iconClass" "jam" "text" "The <span><a href='https://jamstack.org/' target='_blank'>JAMstack</a> is my jam (this very website is built with <a href='https://gohugo.io/ target='_blank'>Hugo</a>)</span>") }}
+          {{ partial "skill" (dict "icon" "<abbr title='JavaScript, APIs and Markup'>JAMstack</abbr>" "iconClass" "jam" "text" "The <span><a href='https://jamstack.org/'>JAMstack</a> is my jam (this very website is built with <a href='https://gohugo.io/>Hugo</a>)</span>") }}
         </ul>
       </section>
 
