--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -1,20 +1,20 @@
     <footer>
         <div class="social">
-            <a href="https://www.linkedin.com/in/ma%C3%ABl-brunet-b5876118/" rel="me" target="_blank" class="social-link">
+            <a href="https://www.linkedin.com/in/ma%C3%ABl-brunet-b5876118/" rel="me" class="social-link">
                 <div class="sr-only">LinkedIn</div>
                 <svg class="social-icon">
                     <use xlink:href="{{ .Site.BaseURL }}images/svg-symbols.svg#linkedin"></use>
                 </svg>
             </a>
 
-            <a href="https://github.com/maeligg" rel="me" target="_blank" class="social-link">
+            <a href="https://github.com/maeligg" rel="me" target="" class="social-link">
                 <div class="sr-only">Github</div>
                 <svg class="social-icon">
                     <use xlink:href="{{ .Site.BaseURL }}images/svg-symbols.svg#github"></use>
                 </svg>
             </a>
 
-            <a href="https://twitter.com/maelb" rel="me" target="_blank" class="social-link">
+            <a href="https://twitter.com/maelb" rel="me" class="social-link">
                 <div class="sr-only">Twitter</div>
                 <svg class="social-icon">
                     <use xlink:href="{{ .Site.BaseURL }}images/svg-symbols.svg#twitter"></use>
@@ -23,7 +23,7 @@
         </div>
         <div class="copyright">
             Hand-crafted with ♥️ and ☕ // Source code available on
-            <a href="https://github.com/maeligg/maelbrunet" target="_blank">GitHub</a> <span class="easter-egg">// Try typing "unicorn" anywhere</span>
+            <a href="https://github.com/maeligg/maelbrunet">GitHub</a> <span class="easter-egg">// Try typing "unicorn" anywhere</span>
         </div>
     </footer>
 
