--- a/site/layouts/resume/single.html
+++ b/site/layouts/resume/single.html
@@ -44,7 +44,7 @@
       <ul class="work-xp">
         <li>
           <div class="meta">
-            <div class="org"><a href="https://www.isabelgroup.eu/en/" target="_blank">Isabel Group</a></div>
+            <div class="org"><a href="https://www.isabelgroup.eu/en/">Isabel Group</a></div>
             <div class="year">Jan 2018 - now</div>
           </div>
           <div class="description">
@@ -61,7 +61,7 @@
         </li>
         <li>
           <div class="meta">
-            <div class="org"><a href="https://www.emakina.be/" target="_blank">Emakina</a></div>
+            <div class="org"><a href="https://www.emakina.be/">Emakina</a></div>
             <div class="year">Jan 2016 - Dec 2017</div>
           </div>
           <div class="description">
@@ -70,10 +70,10 @@
             for some great brands like Ouibus, D'Ieteren, Deutsche Bank, Federale Assurance, ... Notable projects I was
             involved with include :
             <ul>
-              <li>A complete redesign of the <a href="https://www.federale.be" target="_blank">Federale Assurance</a>
+              <li>A complete redesign of the <a href="https://www.federale.be">Federale Assurance</a>
                 website, running on a new platform and including an application to find the nearest Federale office. I
                 was the lead front-end developer on this project.</li>
-              <li>A new <a href="https://onlinebanking.deutschebank.be" target="_blank">online banking
+              <li>A new <a href="https://onlinebanking.deutschebank.be">online banking
                   web
                   app</a> for Deutsche Bank, providing a much improved user experience. I worked on some of the UI
                 design and HTML / CSS for this project.</li>
@@ -82,7 +82,7 @@
         </li>
         <li>
           <div class="meta">
-            <div class="org"><a href="http://www.openforumeurope.org/" target="_blank">OpenForum Europe</a></div>
+            <div class="org"><a href="http://www.openforumeurope.org/">OpenForum Europe</a></div>
             <div class="year">May 2012 - Dec 2015</div>
           </div>
           <div class="description">
@@ -93,12 +93,12 @@
             <ul>
               <li>I lead and helped to grow the team in the Brussels office. I started as the only person working
                 there, and by 2016 the team had grown to 4 people on contract, plus an intern.</li>
-              <li>I designed and developed a <a href="http://www.openforumeurope.org/" target="_blank">new website</a>
+              <li>I designed and developed a <a href="http://www.openforumeurope.org/">new website</a>
                 for OFE
                 from scratch using a custom WordPress theme, including the migration of content from the
-                <a href="http://archive.openforumeurope.org/" target="_blank">old website</a> running on Plone.</li>
+                <a href="http://archive.openforumeurope.org/">old website</a> running on Plone.</li>
               <li>Starting from 2015, I created and maintained a <a href="http://us10.campaign-archive2.com/home/?u=92e540ce342922d890e7dc17a&id=cc91892046"
-                  target="_blank">monthly
+                 >monthly
                   newsletter</a> in support of OFE's new online communication strategy.</li>
             </ul>
           </div>
