--- a/site/layouts/partials/project.html
+++ b/site/layouts/partials/project.html
@@ -2,12 +2,12 @@
 {{ $image_alt := index $image_name 0 }}
 
 <li class="project-item">
-  <a href="{{ .url }}" target="_blank" class="project-link">{{ .name }}</a>
+  <a href="{{ .url }}" class="project-link">{{ .name }}</a>
   <div class="project-year">{{ .publicationYear }}</div>
   <img src="{{ .Site.BaseURL }}/images/project-thumbnails/{{ .thumbnail }}" alt="{{ $image_alt }}" class="project-thumbnail">
   <h3>{{ .name }}</h3>
   <p class="project-description">{{ safeHTML .description }}</p>
   {{ if .code }}
-      <a href="{{ .code }}" class="project-source" target="_blank">Source code</a>
+      <a href="{{ .code }}" class="project-source">Source code</a>
   {{ end }}
 </li>
