Fix some broken markup

--- a/site/layouts/about/single.html
+++ b/site/layouts/about/single.html
@@ -32,7 +32,7 @@
           {{ partial "skill" (dict "icon" "<svg><use xlink:href='/images/svg-symbols.svg#wrench'></use></svg>" "text" "Using the right tools for the perfect build process") }}
           {{ partial "skill" (dict "icon" "<svg><use xlink:href='/images/svg-symbols.svg#styleguide'></use></svg>" "text" "Styleguide and design systems to build consistent UI at scale") }}
           {{ partial "skill" (dict "icon" "<abbr title='Keep It Simple, Stupid'>KISS</abbr>" "iconClass" "kiss" "text" "Avoid unnecessary complexity") }}
-          {{ partial "skill" (dict "icon" "<abbr title='JavaScript, APIs and Markup'>JAMstack</abbr>" "iconClass" "jam" "text" "The <span><a href='https://jamstack.org/'>JAMstack</a> is my jam (this very website is built with <a href='https://gohugo.io/>Hugo</a>)</span>") }}
+          {{ partial "skill" (dict "icon" "<abbr title='JavaScript, APIs and Markup'>JAMstack</abbr>" "iconClass" "jam" "text" "The <span><a href='https://jamstack.org/'>JAMstack</a> is my jam (this very website is built with <a href='https://gohugo.io/'>Hugo</a>)</span>") }}
         </ul>
       </section>
 
