Swap default font when loaded

--- a/src/styles/base/_fonts.scss
+++ b/src/styles/base/_fonts.scss
@@ -25,7 +25,7 @@
     url("../fonts/Raleway-Regular.woff") format("woff");
   font-weight: normal;
   font-style: normal;
-  font-display: optional;
+  font-display: swap;
 }
 
 @font-face {
