--- a/src/styles/pages/_resume.scss
+++ b/src/styles/pages/_resume.scss
@@ -13,7 +13,7 @@
       float: right;
       margin: 2rem 0 0 2rem;
       padding: 20px;
-      background-color: $light-grey;
+      border: 2px solid $green;
 
       h2 {
         margin-top: 0;
