--- a/site/layouts/resume/single.html
+++ b/site/layouts/resume/single.html
@@ -6,9 +6,9 @@
   <main class="barba-container resume">
     <div class="container">
       <h1>Résumé / Curriculum Vitae</h1>
-      <p class="notice-web">This page is optimised for print️, feel free to print it out or export it to PDF if that's
+      <p class="notice-web">🖨️ This page is optimised for print️, feel free to print it out or export it to PDF if that's
         your thing.</p>
-      <p class="print-only">This document is also available as a web page at <a href="https://www.maelbrunet.com/resume">https://www.maelbrunet.com/resume</a></p>
+      <p class="print-only">This document is also available as a web page at <a href="{{ .Site.BaseURL }}resume">{{ .Site.BaseURL }}resume</a></p>
 
       <img src="{{ .Site.BaseURL }}images/mael.jpg" alt="Maël Brunet" class="me print-only">
 
@@ -22,8 +22,7 @@
 
       <p>I believe that a good user interface is like a joke : you shouldn't have to explain it. I value simplicity and
         intuitiveness over fancy and overly engineered interfaces. I love working with prototypes to validate
-        hypothesis
-        and iterate rapidly, as well as design systems to build consistent UI at scale.</p>
+        hypothesis and iterate rapidly, as well as design systems to build consistent UI at scale.</p>
 
       <p>I see open communication, empathy and inclusivity as the essential components of a well-functioning team. For
         more information about myself, head over to the <a href="{{ .Site.BaseURL }}about">about</a> page.</p>
@@ -34,9 +33,7 @@
       <p>
         Do you like keywords ? I have project experience with the following tools and technologies :
       </p>
-      <p>Git, HTML, CSS, Sass, JavaScript (including ES6+), React, Vue, Redux, Jest, npm, Node, Webpack, Rollup,
-        Parcel, Gulp, Babel, ESlint, Lodash, JQuery, Bootstrap, Jekyll, Hugo, Bash, Figma, Photoshop, Illustrator,
-        Agile methodologies.</p>
+      <p>Git, Bash, HTML, CSS, Sass, JavaScript (including ES6+), React, Vue, Redux, Jest, npm, Node, Webpack, Rollup, Gulp, Babel, ESlint, Lodash, JQuery, Bootstrap, Agile methodologies.</p>
 
       <hr>
 
@@ -52,8 +49,7 @@
             services like Isabel 6, Zoomit and CodaBox to companies of all sizes. Part of a small team reporting
             directly to the CEO, I work on a variety of projects, including :
             <ul>
-              <li>I helped to port part of the Isabel 6 application to React. Specifically, I set up some of the
-                tooling used on the project (ESlint, PropTypes, unit tests), and developed some components.</li>
+              <li>I created and maintained a design system to share UI components across multiple projects, based on Vue, Storybook and npm packages.</li>
               <li>I launched and lead a UI 'Community of Practice', gathering designers and developers from all teams
                 within the group on a regular basis to share experiences and best practices.</li>
             </ul>
@@ -73,10 +69,7 @@
               <li>A complete redesign of the <a href="https://www.federale.be">Federale Assurance</a>
                 website, running on a new platform and including an application to find the nearest Federale office. I
                 was the lead front-end developer on this project.</li>
-              <li>A new <a href="https://onlinebanking.deutschebank.be">online banking
-                  web
-                  app</a> for Deutsche Bank, providing a much improved user experience. I worked on some of the UI
-                design and HTML / CSS for this project.</li>
+              <li>A new <a href="https://onlinebanking.deutschebank.be">online banking web app</a> for Deutsche Bank Belgium, providing a much improved user experience. I worked on some of the UI design and HTML / CSS for this project.</li>
             </ul>
           </div>
         </li>
@@ -86,7 +79,7 @@
             <div class="year">May 2012 - Dec 2015</div>
           </div>
           <div class="description">
-            I was <b>policy officer</b> and <b>webmaster</b> for OpenForum Europe, a not-for-profit industry
+            I was <b>policy officer</b> and <b>webmaster</b> for OpenForum Europe (OFE), a not-for-profit industry
             organisation aiming to
             accelerate and broaden the use of Open Source Software among businesses, consumers and governments. In
             2013, I joined the board of directors as <b>Director of European policy</b>.
