--- a/site/layouts/resume-fr/single.html
+++ b/site/layouts/resume-fr/single.html
@@ -7,7 +7,7 @@
     <div class="container">
       <h1>Curriculum Vitae</h1>
       <p class="notice-web">🖨️ Cette page est optimisée pour l'impression, n'hésitez pas à l'imprimer ou à l'exporter au format PDF.</p>
-      <p class="print-only">Ce document est également disponible comme page web l'adresse <a href="{{ .Site.BaseURL }}resume-fr">{{ .Site.BaseURL }}resume-fr</a></p>
+      <p class="print-only">Ce document est également disponible comme page web à l'adresse <a href="{{ .Site.BaseURL }}resume-fr">{{ .Site.BaseURL }}resume-fr</a></p>
 
       <img src="{{ .Site.BaseURL }}images/mael.jpg" alt="Maël Brunet" class="me print-only">
 
