--- a/site/layouts/resume-fr/single.html
+++ b/site/layouts/resume-fr/single.html
@@ -38,8 +38,7 @@
             <div class="year">Jan 2018 - aujourd'hui</div>
           </div>
           <div class="description">
-            J'ai rejoint Isabel Group en tant que <b>développeur front-end et spécialiste UI</b>. Isabel Group est la plus grande fintech de Belgique, fournissant des services bancaires des services tels que Isabel 6, Zoomit et CodaBox aux entreprises de toutes tailles. Intégré à une petite équipe de reportage
-              directement au PDG, je travaille sur divers projets, notamment:
+            J'ai rejoint Isabel Group en tant que <b>développeur front-end et spécialiste UI</b>. Isabel Group est la plus grande fintech de Belgique, fournissant des services bancaires des services tels que Isabel 6, Zoomit et CodaBox aux entreprises de toutes tailles. Intégré à une petite équipe rapportant directement au CTO, je travaille sur divers projets, notamment:
             <ul>
               <li>J'ai créé et entretenu une bibliothèque de composants UI permettant de les partager entre plusieurs projets, à l'aide de Vue, Storybook et de paquets npm.</li>
               <li>J'ai lancé et dirigé une « communauté de pratique » front-end, regroupant les designers et développeurs de toutes les équipes au sein du groupe sur une base régulière pour partager les expériences et les bonnes pratiques.</li>
