--- a/site/layouts/resume/single.html
+++ b/site/layouts/resume/single.html
@@ -47,7 +47,7 @@
           <div class="description">
             I joined Isabel Group as a <b>UI engineer</b>. Isabel Group is Belgium's largest fintech, providing banking
             services like Isabel 6, Zoomit and CodaBox to companies of all sizes. Part of a small team reporting
-            directly to the CEO, I work on a variety of projects, including :
+            directly to the CTO, I work on a variety of projects, including :
             <ul>
               <li>I created and maintained a design system to share UI components across multiple projects, based on Vue, Storybook and npm packages.</li>
               <li>I launched and lead a UI 'Community of Practice', gathering designers and developers from all teams
