--- a/site/layouts/resume-fr/single.html
+++ b/site/layouts/resume-fr/single.html
@@ -51,7 +51,7 @@
             <div class="year">Jan 2016 - Déc 2017</div>
           </div>
           <div class="description">
-            J'étais <b>développeur front-end</b> chez Emakina, une des plus grandes agences web indépendantes en Europe. J'ai eu la chance de travailler pour des grandes marques telles que Ouibus, D'Ieteren, la Deutsche Bank, Federale Assurance, ... Parmi les projets auxquels j'ai participé, citons :
+            En tant que <b>développeur front-end</b> chez Emakina, une des plus grandes agences web indépendantes en Europe, j'ai eu la chance de travailler pour des grandes marques telles que Ouibus, D'Ieteren, la Deutsche Bank, Federale Assurance, ... Parmi les projets auxquels j'ai participé, citons :
             <ul>
               <li>Une refonte complète du site web de <a href="https://www.federale.be">Federale Assurance</a>, fonctionnant sur une nouvelle plate-forme et comprenant une application permettant de trouver le bureau Federale le plus proche. J'étais lead développeur front-end sur ce projet.</li>
               <li>Une nouvelle <a href="https://onlinebanking.deutschebank.be">application web</a> de banque en ligne pour Deutsche Bank Belgique, offrant une expérience utilisateur considérablement améliorée. J'ai travaillé sur une partie de la conception UI et la partie HTML / CSS pour ce projet.</li>
