--- a/site/layouts/resume/single.html
+++ b/site/layouts/resume/single.html
@@ -21,7 +21,7 @@
         good front-end developer, and everything else (frameworks in particular) can be learned as needed.</p>
 
       <p>I believe that a good user interface is like a joke : you shouldn't have to explain it. I value simplicity and
-        intuitiveness over fancy and overly engineered interfaces. I love working with prototypes to validate
+        intuitiveness over complex and overly engineered solutions. I love working with prototypes to validate
         hypothesis and iterate rapidly, as well as design systems to build consistent UI at scale.</p>
 
       <p>I see open communication, empathy and inclusivity as the essential components of a well-functioning team. For
@@ -33,7 +33,7 @@
       <p>
         Do you like keywords ? I have project experience with the following tools and technologies :
       </p>
-      <p>Git, Bash, HTML, CSS, Sass, JavaScript (including ES6+), React, Vue, Redux, Jest, npm, Node, Webpack, Rollup, Gulp, Babel, ESlint, Lodash, JQuery, Bootstrap, Agile methodologies.</p>
+      <p>Git, Bash, HTML, CSS, Sass, JavaScript (including ES6+), React, Redux, Vue, Jest, npm, Node, Webpack, Rollup, Gulp, Babel, ESlint, Lodash, JQuery, Bootstrap, Agile methodologies.</p>
 
       <hr>
 
