Change some copy

--- a/site/layouts/resume/single.html
+++ b/site/layouts/resume/single.html
@@ -45,7 +45,7 @@
             <div class="year">Jan 2018 - now</div>
           </div>
           <div class="description">
-            I joined Isabel Group as a <b>UI engineer</b>. Isabel Group is Belgium's largest fintech, providing banking
+            I joined Isabel Group as a <b>front-end developer</b> and <b>UI specialist</b>. Isabel Group is Belgium's largest fintech, providing banking
             services like Isabel 6, Zoomit and CodaBox to companies of all sizes. Part of a small team reporting
             directly to the CTO, I work on a variety of projects, including :
             <ul>
