Remove barba.js

--- a/site/layouts/about/single.html
+++ b/site/layouts/about/single.html
@@ -1,7 +1,7 @@
 {{ partial "head" . }} {{ partial "nav" . }}
 
-<div id="barba-wrapper">
-  <main class="barba-container about">
+<div>
+  <main class="about">
     <div class="container">
       <img src="{{ .Site.BaseURL }}images/mael.jpg" alt="Maël Brunet" class="me">
 
