--- a/site/layouts/contact/single.html
+++ b/site/layouts/contact/single.html
@@ -1,7 +1,7 @@
 {{ partial "head" . }} {{ partial "nav" . }}
 
-<div id="barba-wrapper">
-  <main class="barba-container contact">
+<div>
+  <main class="contact">
     <div class="container">
       <section class="animation">
         <svg class="plane js-toggle-active" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60.062 60.062">
