--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -1,7 +1,7 @@
 {{ partial "head" . }} {{ partial "nav" . }}
 
-<div id="barba-wrapper">
-  <main class="barba-container home">
+<div>
+  <main class="home">
     <h1 class="main-title">👋 I'm
       <a href="{{ .Site.BaseURL }}about">Maël Brunet</a>, a
       <span class="txt-rotate"></span>
