--- a/site/layouts/projects/single.html
+++ b/site/layouts/projects/single.html
@@ -2,8 +2,8 @@
 
 {{ partial "nav" . }}
 
-<div id="barba-wrapper">
-    <main class="barba-container projects">
+<div>
+    <main class="projects">
         <div class="container">
             <h1>Projects</h1>
 
