--- a/site/layouts/resume-fr/single.html
+++ b/site/layouts/resume-fr/single.html
@@ -2,8 +2,8 @@
 
 {{ partial "nav" . }}
 
-<div id="barba-wrapper">
-  <main class="barba-container resume">
+<div>
+  <main class="resume">
     <div class="container">
       <h1>Curriculum Vitae</h1>
       <p class="notice-web">🖨️ Cette page est optimisée pour l'impression, n'hésitez pas à l'imprimer ou à l'exporter au format PDF.</p>
