--- a/site/layouts/resume/single.html
+++ b/site/layouts/resume/single.html
@@ -2,8 +2,8 @@
 
 {{ partial "nav" . }}
 
-<div id="barba-wrapper">
-  <main class="barba-container resume">
+<div>
+  <main class="resume">
     <div class="container">
       <h1>Résumé / Curriculum Vitae</h1>
       <p class="notice-web">🖨️ This page is optimised for print️, feel free to print it out or export it to PDF if that's
