--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,20 +1,34 @@
-@charset "UTF-8";
-
 // 1. Configuration and helpers
-@import "abstracts/animations", "abstracts/variables", "abstracts/mixins";
+@import
+"abstracts/variables",
+"abstracts/mixins";
 
 // 2. Vendors
-@import "vendor/normalize";
+@import
+"vendor/normalize";
 
 // 3. Base stuff
-@import "base/base", "base/fonts", "base/helpers";
+@import
+"base/base",
+"base/fonts",
+"base/helpers";
 
 // 4. Layout-related sections
-@import "layout/header", "layout/footer", "layout/print";
+@import
+"layout/header",
+"layout/footer",
+"layout/print";
 
 // 5. Components
-@import "components/button", "components/cookies", "components/picture";
+@import
+"components/button",
+"components/cookies",
+"components/picture";
 
 // 6. Page-specific styles
-@import "pages/home", "pages/about", "pages/contact", "pages/projects",
-  "pages/resume";
+@import
+"pages/home",
+"pages/about",
+"pages/contact",
+"pages/projects",
+"pages/resume";
