JS refactoring / cleaning up

--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -93,7 +93,7 @@ nav {
       background-color: transparent;
     }
 
-    &.open {
+    &.active {
       position: fixed;
       right: 20px;
       fill: #fff;
