--- a/src/styles/components/_cookies.scss
+++ b/src/styles/components/_cookies.scss
@@ -1,4 +1,5 @@
 .cookies {
+  display: none;
   position: fixed;
   z-index: 200;
   bottom: 20px;
@@ -10,6 +11,10 @@
   color: #fff;
   box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.5);
   transition: opacity 0.3s ease-out;
+
+  @include respond-to(medium) {
+    display: block;
+  }
 
   .close-button {
     float: right;
