Simplify nav and prevent style reflows on load

--- a/site/layouts/about/single.html
+++ b/site/layouts/about/single.html
@@ -4,7 +4,7 @@
   <main class="about">
     <div class="container">
       <section class="intro">
-        <h1>About</h1>
+        <h1 class="sr-only">About</h1>
         <img src="{{ .Site.BaseURL }}images/mael.jpg" alt="Maël Brunet" class="me">
         <p>I'm a self-taught french (front-end) web developer and UI designer living in Brussels, Belgium. I code mostly on
           the client-side, designing accessible and beautiful interfaces with HTML & CSS, and programming awesome experiences
