--- a/site/layouts/contact/single.html
+++ b/site/layouts/contact/single.html
@@ -10,7 +10,7 @@
         </svg>
       </section>
       <section class="form">
-        <h1>Get in touch</h1>
+        <h1 class="sr-only">Get in touch</h1>
         <form action="https://formspree.io/maelbrunet@gmail.com" method="POST">
           <label for="name">Your name :
             <abbr title="This field is required">*</abbr>
