--- a/site/layouts/projects/single.html
+++ b/site/layouts/projects/single.html
@@ -5,7 +5,7 @@
 <div>
     <main class="projects">
         <div class="container">
-            <h1>Projects</h1>
+            <h1 class="sr-only">Projects</h1>
 
             <section>
               <ul>
