--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -175,23 +175,24 @@ nav {
       font-size: 2rem;
 
       a {
-        padding: 20px;
-        border: none;
+        margin: 10px;
+        padding: 10px;
+        border: 4px solid transparent;
         color: $text-color;
         text-decoration: none;
         text-transform: uppercase;
 
         @include on-event {
-          color: $blue;
+          background-color: $green;
+          color: #fff;
         }
       }
 
       &.active a {
-        outline: 4px solid #fff;
+        border: 4px solid #fff;
 
         @include respond-to(medium) {
-          outline: 4px solid $green;
-          color: $blue;
+          border: 4px solid $green;
         }
       }
     }
